# TauOS

./: .gitignore  CMakeLists.txt  build.sh  clean.sh  dockerfile  limine.cfg  setup_limine.sh
src/: CMakeLists.txt
src/kernel/: CMakeLists.txt
src/kernel/i386/: CMakeLists.txt
src/kernel/i386/libk/string/: CMakeLists.txt  memcmp.c  memcpy.c  memmove.c  memset.c
src/kernel/i386/pc/: CMakeLists.txt  kernel.c
src/kernel/i386/pc/interrupts/: CMakeLists.txt  idt.c  idt.h  stub_table.asm
src/kernel/i386/pc/interrupts/exceptions/: CMakeLists.txt  generalExceptionHandler.c
src/libc/: string.h
